--- a/css/main.css
+++ b/css/main.css
@@ -35,9 +35,10 @@ button:hover {
 }
 
 fieldset {
-    font-size: 20px;
+    font-size: 40px;
     border: 3px white solid;
-    margin: 5%;
+    margin: auto;
+    width: 75%;
 }
 
 /* Home */
@@ -77,7 +78,10 @@ fieldset {
     margin: 60px 0;
 }
 #pic1{
-    /* position: absolute; */
+    position: absolute;
+    z-index: 2;
+    transition: opacity, 1s ease-in 1ms;
+    cursor: pointer;
 }
 
 #pic1, #pic2 {
@@ -85,15 +89,10 @@ fieldset {
 }
 
 #pic2{
-    position: absolute;
-    z-index: 2;
-    transition: opacity, 1s ease-in 1ms;
-    cursor: pointer;
-    right: 50%;
-    transform: translateX(50%);
+    z-index: 1;
 }
 
-#pic2:hover {
+#pic1:hover {
     opacity: 0;
 }
 
@@ -103,13 +102,31 @@ fieldset {
     margin-top: 26.8px;
 }
 
+/* pseudo */
+
+#pseudo {
+    text-align: center;
+    display: flex;
+    margin: auto;
+    box-sizing: border-box;
+    border-radius: 10px;
+    width: 50%;
+    font-size: 70%;
+}
+
+#nextForm {
+    display: flex;
+    margin: 3% auto 0 auto;
+
+}
+
 /* Questions */
 
 .question {
-    font-size: 30px;
+    font-size: 45px;
 }
 .rep {
-    /* margin-left: 500px; */
+    margin-left: 25%;
 }
 .touchRep:hover {
     color: rgb(150, 10, 10);
@@ -128,9 +145,6 @@ fieldset {
 }
 
 .bcgPB {
-
-}
-.bcgPB, #toEnd {
     background: black url("../Logo/logofond.png") fixed no-repeat center; 
 }
 
@@ -143,13 +157,13 @@ fieldset {
 #seeyou {
     display: flex;
     margin: auto;
+    width: 75%;
+    height: 75%;
 }
 
 #date {
     font-size: 60px;
 }
-
-
 
 .gifBack {
     position: absolute;
@@ -157,19 +171,11 @@ fieldset {
     height: 75px;
     z-index: 1;
     opacity: 0;
+    transition: opacity, width, height, 1s linear 1ms;
 }
 
 .gifBack:hover {
     opacity: 1;
-}
-
-.transitionGif {
-    transition: opacity, width, height, 1s linear 1ms;
-    cursor: pointer;
-}
-
-.transitionGif:hover {
-    opacity: 1;
-    width: 300px;
-    height: 150px;
+    width: 20%;
+    height: 20%;
 }
